# referral-network-demo

./: .env.example  .gitignore  DEPLOY.md  Makefile  README.md  agent_tools.py  cosmos_connection.py  explore_graph.py  export_for_powerbi.py  load_sample_data.py  network_cli.py  pyproject.toml  referral_agent.py  requirements-dev.txt  requirements.txt  run_agent.py
PRPs/: modular-domain-architecture.md  quality-improvement-domain.md
azure-functions/: .gitignore  README.md  cosmos_connection.py  deploy-azure.sh  diagram_generators.py  function_app.py  local.settings.json.example  requirements.txt
cli/: __init__.py  network_cli.py  run_agent.py
config/: domains.yaml
docs/: REFACTORING_PLAN.md  adding_domains.md  architecture.md  azure_service_dependencies.md
docs/graph_analytics_cases/: 01_quality_improvement.md  02_health_equity.md  03_cmc_coordination.md  04_readmissions.md  05_workforce.md  06_antimicrobial_stewardship.md
gradient-agents/: .env.example  .gitignore  deploy.sh  main.py  requirements.txt
gradient-agents/.gradient/: agent.yml
pipes/: do-function-pipe.py  gradient-inference-pipe.py
powerbi_export/: employment.csv  employment.json  export_summary.json  hospital_services.csv  hospital_services.json  hospitals.csv  hospitals.json  providers.csv  providers.json  referrals.csv  referrals.json  service_lines.csv  service_lines.json
scripts/: explore_graph.py  export_for_powerbi.py  load_quality_improvement_data.py  load_sample_data.py
src/: __init__.py  cosmos_connection.py
src/core/: __init__.py  diagram_base.py  exceptions.py  tool_registry.py
src/domains/: __init__.py
src/prompts/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py
(+18 files in other folders)
